# Game_of_Life

./: CMakeLists.txt  Doxyfile  Makefile  README.md  a.out  arena.c  arena.h  cell.c  cell.h  cunit_t.c  game  game.c  main  main.c  sdl.c  sdl.h
.github/workflows/: CI-Final.yml  CI.c  CI.yml  CI_test1.yml  ccpp.yml
Doc/html/: arena_8c.html  arena_8c__incl.map  arena_8c__incl.md5  arena_8h.html  arena_8h__dep__incl.map  arena_8h__dep__incl.md5  arena_8h_source.html  cell_8c.html  cell_8c__incl.map  cell_8c__incl.md5  cell_8h.html  cell_8h__dep__incl.map  cell_8h__dep__incl.md5  cell_8h_source.html  cunit__t_8c.html  cunit__t_8c__incl.map  cunit__t_8c__incl.md5  dir_000000_000001.html  dir_7bc43d1faf255742d8330d975d2cd579.html  dir_7bc43d1faf255742d8330d975d2cd579_dep.map  dir_7bc43d1faf255742d8330d975d2cd579_dep.md5  dir_c33286056d2acf479cd8641ef845fec1.html  files.html  game_8c.html  game_8c__incl.map  game_8c__incl.md5  game_8h.html  game_8h__dep__incl.map  game_8h__dep__incl.md5  game_8h_source.html  globals.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  main_8c.html  main_8c__incl.map  main_8c__incl.md5  menudata.js  sdl_8h.html  (+5 more)
Doc/html/search/: all_0.js  all_1.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  files_0.js  files_1.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_9.js  searchdata.js  variables_0.js
Doc/latex/: arena_8c.tex  arena_8c__incl.md5  arena_8h.tex  arena_8h__dep__incl.md5  cell_8c.tex  cell_8c__incl.md5  cell_8h.tex  cell_8h__dep__incl.md5  cunit__t_8c.tex  cunit__t_8c__incl.md5  dir_7bc43d1faf255742d8330d975d2cd579.tex  dir_c33286056d2acf479cd8641ef845fec1.tex  files.tex  game_8c.tex  game_8c__incl.md5  game_8h.tex  game_8h__dep__incl.md5  main_8c.tex  main_8c__incl.md5  refman.tex  sdl_8h.tex  sdl_8h__dep__incl.md5  sdl_8h__incl.md5
Drawing/: CMakeLists.txt  game.c  sdl.h
Drawing/include/: game.h
Game/: CMakeLists.txt  arena.c  arena.h  cell.c  cell.h
